--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "graphql": "^15.1.0",
     "graphql-tag": "^2.10.3",
     "vue": "^2.6.11",
-    "vue-apollo": "^3.0.3"
+    "vue-apollo": "^3.0.3",
+    "vue-worker": "^1.2.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
